--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,8 +98,9 @@ input, select, textarea {
 	}
 
 	body, input, select, textarea {
-		color: rgba(255, 255, 255, 0.75);
-		font-family: "Roboto", Helvetica, sans-serif;
+		/* color: rgba(255, 255, 255, 0.75);*/
+		color: rgba(0, 0, 0, 0.75);
+		font-family: "Gantari", Helvetica, sans-serif;
 		font-size: 15pt;
 		font-weight: 100;
 		line-height: 1.75em;
@@ -111,12 +112,12 @@ input, select, textarea {
 		-ms-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
-		color: #e44c65;
+		color: #e91e63;
 		text-decoration: none;
 	}
 
 		a:hover {
-			color: #e44c65 !important;
+			color: #e91e63 !important;
 			border-bottom-color: transparent;
 		}
 
@@ -133,17 +134,46 @@ input, select, textarea {
 		margin: 0 0 2em 0;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
-		color: #ffffff;
+	#one p {
+		color: #ffffff
+	}
+
+	#two p {
+		color: #ffffff
+	}
+
+	#three p {
+		color: #ffffff
+	}
+
+	#four p {
+		color: #ffffff
+	}
+
+	#five p {
+		color: #ffffff
+	}
+
+	#banner h1, #banner h2, #banner h3, #banner h4, #banner h5, #banner h6 {
+		/*color: #ffffff;*/
+		color: #000000;
 		font-weight: 300;
 		line-height: 1em;
 		margin: 0 0 1em 0;
 	}
 
-		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-			color: inherit;
-			border: 0;
-		}
+	h1, h2, h3, h4, h5, h6 {
+		color: #ffffff;
+		/*color: #000000;*/
+		font-weight: 300;
+		line-height: 1em;
+		margin: 0 0 1em 0;
+	}
+
+	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+		color: inherit;
+		border: 0;
+	}
 
 	h2 {
 		font-size: 2em;
@@ -2154,7 +2184,8 @@ input, select, textarea {
 	}
 
 	header p {
-		color: #ffffff;
+		/*color: #ffffff;*/
+		color: #000000;
 		position: relative;
 		margin: 0 0 1.5em 0;
 	}
@@ -2186,7 +2217,7 @@ input, select, textarea {
 	}
 
 		header.major:after {
-			background: #e44c65;
+			background: #e91e63;
 			content: '';
 			display: inline-block;
 			height: 0.2em;
@@ -2233,8 +2264,9 @@ input, select, textarea {
 		transition: border-color 0.2s ease-in-out;
 		background: transparent;
 		border-radius: 4px;
-		border: solid 1px rgba(255, 255, 255, 0.3);
-		color: inherit;
+		border: solid 1.5px rgba(255, 255, 255, 0.8);
+		color: #ffffff;
+		font-weight: 400;
 		display: block;
 		outline: 0;
 		padding: 0 1em;
@@ -2255,7 +2287,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #e44c65;
+			border-color: #e91e63;
 		}
 
 	select {
@@ -2358,7 +2390,7 @@ input, select, textarea {
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #e44c65;
+			border-color: #e91e63;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2523,7 +2555,7 @@ input, select, textarea {
 			position: absolute;
 			left: 0;
 			top: 0;
-			background-image: url("images/overlay.png");
+			/*background-image: url("images/overlay.png");*/
 			width: 100%;
 			height: 100%;
 			z-index: 1;
@@ -2855,8 +2887,8 @@ input, select, textarea {
 		input[type="button"]:active,
 		.button:hover,
 		.button:active {
-			box-shadow: inset 0 0 0 1px #e44c65;
-			color: #e44c65 !important;
+			box-shadow: inset 0 0 0 1px #e91e63;
+			color: #e91e63 !important;
 		}
 
 		input[type="submit"]:active,
@@ -2898,7 +2930,7 @@ input, select, textarea {
 		input[type="reset"].primary,
 		input[type="button"].primary,
 		.button.primary {
-			background-color: #e44c65;
+			background-color: #e91e63;
 			box-shadow: none;
 			color: #ffffff !important;
 		}
@@ -2907,7 +2939,8 @@ input, select, textarea {
 			input[type="reset"].primary:hover,
 			input[type="button"].primary:hover,
 			.button.primary:hover {
-				background-color: #e76278;
+				/*background-color: #e76278;*/
+				background-color: #000000;
 			}
 
 			input[type="submit"].primary:active,
@@ -3139,15 +3172,18 @@ input, select, textarea {
 		}
 
 		.spotlight.style1 .content {
-			border-color: #e44c65;
+			/*border-color: #e91e63;*/
+			border-color:#e91e63;
 		}
 
 		.spotlight.style2 .content {
-			border-color: #5480f1;
+			/*border-color: #5480f1;*/
+			border-color:#e91e63;
 		}
 
 		.spotlight.style3 .content {
-			border-color: #39c088;
+			/*border-color: #39c088;*/
+			border-color:#e91e63;
 		}
 
 		.spotlight.inactive .content {
@@ -3201,7 +3237,7 @@ input, select, textarea {
 	}
 
 		.wrapper.style2 {
-			background: #e44c65;
+			background: #e91e63;
 		}
 
 			.wrapper.style2 input[type="text"]:focus,
@@ -3236,7 +3272,7 @@ input, select, textarea {
 			.wrapper.style2 input[type="button"].primary,
 			.wrapper.style2 .button.primary {
 				background-color: #ffffff;
-				color: #e44c65 !important;
+				color: #e91e63 !important;
 			}
 
 				.wrapper.style2 input[type="submit"].primary:hover, .wrapper.style2 input[type="submit"].primary:active,
@@ -3340,7 +3376,7 @@ input, select, textarea {
 			}
 
 			.dropotron > li.active > a, .dropotron > li.active > span {
-				color: #e44c65;
+				color: #e91e63;
 			}
 
 		.dropotron.level-0 {
@@ -3430,7 +3466,7 @@ input, select, textarea {
 						}
 
 					#header nav ul li.active > a, #header nav ul li.active > span {
-						color: #e44c65;
+						color: #e91e63;
 					}
 
 					#header nav ul li > ul {
@@ -3471,10 +3507,14 @@ input, select, textarea {
 		}
 
 		#banner:after {
-			background-image: -moz-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
+			/*background-image: -moz-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
 			background-image: -webkit-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
 			background-image: -ms-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			background-image: linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
+			background-image: linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;*/
+			background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)), url("images/overlay.png");;
+			background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)), url("images/overlay.png");;
+			background-image: -ms-linear-gradient(top, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)), url("images/overlay.png");;
+			background-image: linear-gradient(top, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)), url("images/overlay.png");;
 			content: '';
 			display: block;
 			height: 100%;
@@ -3511,7 +3551,7 @@ input, select, textarea {
 				}
 
 			#banner .content .image {
-				border-radius: 100%;
+				/*border-radius: 100%;*/
 				display: inline-block;
 				height: 18em;
 				margin-left: 3em;
@@ -3520,7 +3560,7 @@ input, select, textarea {
 			}
 
 				#banner .content .image img {
-					border-radius: 100%;
+					/*border-radius: 100%;*/
 					display: block;
 					width: 100%;
 				}
@@ -3926,11 +3966,11 @@ input, select, textarea {
 						line-height: 1;
 						text-transform: none !important;
 						font-family: 'Font Awesome 5 Free';
-						font-weight: 900;
+						font-weight: 700;
 					}
 
 					#titleBar .toggle:before {
-						background: #e44c65;
+						background: #e91e63;
 						color: rgba(255, 255, 255, 0.5);
 						content: '\f0c9';
 						display: block;
